{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 56,
  "lineage": "14de3c1c-c441-8615-caa6-17e554ca57cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096b32cc197d13c30",
            "association_id": "eipassoc-02527ff0d749ad202",
            "domain": "vpc",
            "id": "eipalloc-096b32cc197d13c30",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0de76ff19b823760e",
            "private_dns": "ip-10-0-101-239.ec2.internal",
            "private_ip": "10.0.101.239",
            "public_dns": "ec2-34-194-56-80.compute-1.amazonaws.com",
            "public_ip": "34.194.56.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "iac_igw_eip"
            },
            "tags_all": {
              "Name": "iac_igw_eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8b8f874036055b1",
            "arn": "arn:aws:ec2:us-east-1:097353506608:instance/i-0daa55704b0bac75b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0daa55704b0bac75b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Sivaji",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0823fcaaf6e228582",
            "private_dns": "ip-10-0-101-128.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.128",
            "public_ip": "54.85.254.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a4e11838bea50065",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02cee34a247ad450a",
            "tags": {
              "Name": "Ubuntu EC2 Server"
            },
            "tags_all": {
              "Name": "Ubuntu EC2 Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08f369171988ab949"
            ]
          },
          "dependencies": [
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:internet-gateway/igw-04a9697af8deaa0e8",
            "id": "igw-04a9697af8deaa0e8",
            "owner_id": "097353506608",
            "tags": {
              "Name": "iac_igw"
            },
            "tags_all": {
              "Name": "iac_igw"
            },
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096b32cc197d13c30",
            "association_id": "eipassoc-02527ff0d749ad202",
            "connectivity_type": "public",
            "id": "nat-06e281fcbc1dfbc78",
            "network_interface_id": "eni-0de76ff19b823760e",
            "private_ip": "10.0.101.239",
            "public_ip": "34.194.56.80",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02cee34a247ad450a",
            "tags": {
              "Name": "iac_nat_gateway"
            },
            "tags_all": {
              "Name": "iac_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:route-table/rtb-0ec20fedb652f43fe",
            "id": "rtb-0ec20fedb652f43fe",
            "owner_id": "097353506608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06e281fcbc1dfbc78",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac_private_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "iac_private_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:route-table/rtb-09b9866927ce5e9be",
            "id": "rtb-09b9866927ce5e9be",
            "owner_id": "097353506608",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04a9697af8deaa0e8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "iac_private_rtb",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "iac_private_rtb",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038e748af18ac8958",
            "route_table_id": "rtb-0ec20fedb652f43fe",
            "subnet_id": "subnet-0ba3f601c2bbf7a68"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025aab0d97d4bb0b6",
            "route_table_id": "rtb-0ec20fedb652f43fe",
            "subnet_id": "subnet-0000aa59d83c9eb05"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a66ac4840b9d494",
            "route_table_id": "rtb-0ec20fedb652f43fe",
            "subnet_id": "subnet-08dd5bbff130a6340"
          },
          "dependencies": [
            "aws_eip.nat_gateway_eip",
            "aws_internet_gateway.internet_gateway",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf37aa6b854aebd2",
            "route_table_id": "rtb-09b9866927ce5e9be",
            "subnet_id": "subnet-02cee34a247ad450a"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c2a42b1645bb7d0",
            "route_table_id": "rtb-09b9866927ce5e9be",
            "subnet_id": "subnet-0d714fbf178b0d0e1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec288f468ebd0642",
            "route_table_id": "rtb-09b9866927ce5e9be",
            "subnet_id": "subnet-02a27d4f44ad0c947"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "My_VPC_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:security-group/sg-00985c32668f9f629",
            "description": "My VPC Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00985c32668f9f629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "My VPC Security Group",
            "name_prefix": "",
            "owner_id": "097353506608",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "My VPC Security Group",
              "Name": "My VPC Security Group"
            },
            "tags_all": {
              "Description": "My VPC Security Group",
              "Name": "My VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:subnet/subnet-0ba3f601c2bbf7a68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba3f601c2bbf7a68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097353506608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:subnet/subnet-0000aa59d83c9eb05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0000aa59d83c9eb05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097353506608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "private_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:subnet/subnet-08dd5bbff130a6340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08dd5bbff130a6340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097353506608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "private_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_subnet_1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:subnet/subnet-02cee34a247ad450a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cee34a247ad450a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097353506608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_1",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:subnet/subnet-0d714fbf178b0d0e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d714fbf178b0d0e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097353506608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_2",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "public_subnet_3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:subnet/subnet-02a27d4f44ad0c947",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a27d4f44ad0c947",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097353506608",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "public_subnet_3",
              "Terraform": "true"
            },
            "vpc_id": "vpc-034400b0a27df7489"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097353506608:vpc/vpc-034400b0a27df7489",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c8fd9c2e3bb4fdb",
            "default_route_table_id": "rtb-02f8b320ab6e3af68",
            "default_security_group_id": "sg-08f369171988ab949",
            "dhcp_options_id": "dopt-61c85b1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-034400b0a27df7489",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02f8b320ab6e3af68",
            "owner_id": "097353506608",
            "tags": {
              "Environment": "Demo_Environment",
              "Name": "vpc_demoiac",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Demo_Environment",
              "Name": "vpc_demoiac",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}